<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.netxms.nxmc</groupId>
    <artifactId>netxms-eclipse</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>Product</module> 
        <module>../../java-common</module>
        <module>../../client/java</module>
        <module>ActionManager</module>
        <module>AgentManager</module>
        <module>AlarmViewer</module>
        <module>Charts</module>
        <module>Core</module>
        <module>Dashboard</module>
        <module>DataCollection</module>
        <module>EPP</module>
        <module>EventManager</module>
        <module>FileManager</module>
        <module>ImageLibrary</module>
        <module>Logger</module>
        <module>LogViewer</module>
        <module>NXSL</module>
        <module>NetworkMaps</module>
        <module>OSM</module>
        <module>ObjectBrowser</module>
        <module>ObjectBrowser.AdapterFactory</module>
        <module>ObjectManager</module>
        <module>ObjectTools</module>
        <module>ObjectView</module>
        <module>PerfView</module>
        <module>Reporter</module>
        <module>SLM</module>
        <module>SNMP</module>
        <module>ServerConfig</module>
        <module>ServerConsole</module>
        <module>ServerJobManager</module>
        <module>ServiceView</module>
        <module>SwitchManager</module>
        <module>Topology</module>
        <module>UserManager</module>
        <module>swtchart</module>
    </modules>

    <properties>
        <tycho.version>2.7.5</tycho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
        <tycho.groupid>org.eclipse.tycho</tycho.groupid>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>Babel-project</id>
            <url>https://download.eclipse.org/technology/babel/update-site/R0.19.2/2021-12/</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>zest</id>
            <url>http://www.netxms.org/eclipse/zest-rcp</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>eclipse-2022-03</id>
            <url>http://download.eclipse.org/releases/2022-03</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>eclipse-2022-03-update</id>
            <url>http://download.eclipse.org/eclipse/updates/4.23</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <id>versions</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>update-pom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>${tycho.groupid}</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>${tycho.groupid}</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <encoding>${project-build-sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>${tycho.groupid}</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>aarch64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>aarch64</arch>
                        </environment>
                    </environments>
                </configuration> 
            </plugin>
        </plugins>
    </build>
</project>
